[tool.poetry]
name = "pythoneda-python-packages-infrastructure"
version = "0.0.1a2"
description = "Infrastructure layer of pythoneda-python-packages"
authors = ["rydnr <github@acm-sl.org>"]
readme = "README.md"
packages = [{include = "PythonEDAPythonPackagesInfrastructure"}]

[tool.poetry.dependencies]
python = "^3.7"
pythoneda-infrastructure-layer = "^0.0.1a2"
pythoneda-python-packages = "^0.0.1a2"

[tool.poetry.dev-dependencies]
pytest = "^7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
generate-grpc = "scripts.make_grpc:main"
