[tool.poetry]
name = "pythoneda-infrastructure-python-packages"
version = "0.0.1a3"
description = "Infrastructure layer of Pythoneda Python Packages"
authors = ["rydnr <github@acm-sl.org>"]
readme = "README.md"
homepage = "https://github.com/pythoneda-infrastructure/python-packages"
packages = [{include = "PythonEDAInfrastructurePythonPackages"}]

[tool.poetry.dependencies]
python = "^3.6"
pythoneda-infrastructure-base = "^0.0.1a5"
pythoneda-python-packages = "^0.0.1a3"

[tool.poetry.dev-dependencies]
pytest = "^7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
generate-grpc = "scripts.make_grpc:main"
